# marIOkart

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  OVERLAYS.md  READING_FILES.md  READING_MEMORY.md  README.md  baby_park.dsm  environment.yaml  environment.yml  genindex.html  index.html  install.sh  interface.txt  interface2.txt  libdesmume.dylib.txt  main.py  objects.inv  probe.txt  py-modindex.html  pyproject.toml  read_y9.py  requirements.txt  search.html  searchindex.js  stat.py  test_genome.json  tmp.h  tmp.sh  vanilla_rnn_kart.pth
.doctrees/: environment.pickle  index.doctree
.doctrees/_includes/: kcl_tables.doctree  nkm_tables.doctree
.doctrees/api/: mkds.doctree  modules.doctree  src.core.doctree  src.doctree  src.mkds_extensions.doctree  src.utils.doctree  src.visualization.doctree
.github/workflows/: documentation.yaml  publish-docs.yaml
_includes/: kcl_tables.html  nkm_tables.html
_modules/: index.html
_modules/mkds/: kcl.html  nkm.html  utils.html
_modules/src/: main.html
api/: mkds.html  modules.html  src.core.html  src.html  src.mkds_extensions.html  src.utils.html  src.visualization.html
api/articles/: OVERLAYS.html  READING_FILES.html  READING_MEMORY.html  articles.html
api/mkds/: kcl.html  nkm.html  utils.html
checkpoints/lstm/: checkpoint.ckpt  lstm_checkpoint_2026_02_28.ckpt
checkpoints_backup/cnn/: cnn_checkpoint_2026_02_28.ckpt
checkpoints_backup/lstm/: checkpoint.ckpt  lstm_checkpoint_2026_02_28_1.ckpt  lstm_checkpoint_2026_03_03.ckpt
courses/: rename.sh
desert_course/: desert_course.carc
docs/: CNAME  READING_MEMORY.md  _conf.py  conf.py  index.rst  requirements.txt
example_configs/: debug.json  train_rl.json
media/: overlay_demo_clip_1.mov
mkds/: pyproject.toml
model_checkpoints/: chk_-2812149.json  chk_-3772572.json  chk_-5848642.json
notebooks/: race_dataset.ipynb
notes/: todo.txt
private/: README.md  driver_out.h  mkds_driver.h
script_configs/: train.json
src/: config.py  main.py  sync.py
tests/: cart_orientation.py  cart_position.py  cross_prod_precision.py  decode_triangles.py  load_triangles.py  plot_course.py  search.py  simple_emulator.py
utils/: checkpoint_data.py  collision_data.py  course.py  draw.py  emulator.py  init_emulator.py  kcl_torch.py  keyboard.py  keyboard_hack.py  memory.py  model.py  nkm_torch.py  object.py  overlay.py  race_data.py  racer.py  train.py  utils.py  vector.py
(+1648 files in other folders)
